--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,6 @@
   background-repeat: no-repeat;
 }
 
-h1 {
-  font-family: "Inter";
-}
-
 @media screen and (max-width: 900px) {
   .hero {
     font-size: 3rem;
@@ -252,6 +248,39 @@ footer {
   width: 100%;
   margin-top: 1rem;
 }
+.article-wrapper .article-main .grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 0.5rem;
+  row-gap: 1rem;
+  margin-top: 1rem;
+}
+.article-wrapper .article-main .grid-container img {
+  width: 100%;
+}
+.article-wrapper .article-main .item1 {
+  grid-area: 1/1/1/1;
+}
+.article-wrapper .article-main .item2 {
+  grid-area: 2/1/2/1;
+}
+.article-wrapper .article-main .item3 {
+  grid-area: 3/1/3/1;
+}
+.article-wrapper .article-main ul {
+  margin-left: 3rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.article-wrapper .article-main figure {
+  margin-top: 0.5rem;
+  text-align: center;
+  color: #3a3a3a;
+}
+.article-wrapper .article-main figure img {
+  width: 100%;
+}
 @media screen and (min-width: 900px) {
   .article-wrapper {
     width: 60vw;
@@ -271,6 +300,23 @@ footer {
     width: 40vw;
     max-width: 700px;
     margin: 0 auto;
+  }
+  .article-wrapper .article-main .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+  .article-wrapper .article-main .item1 {
+    grid-area: 1/1/2/2;
+  }
+  .article-wrapper .article-main .item2 {
+    grid-area: 1/2/2/3;
+  }
+  .article-wrapper .article-main .item3 {
+    grid-area: 2/1/3/3;
+  }
+  .article-wrapper .article-main figure img {
+    width: 100%;
   }
 }
 .article-wrapper h2 {
@@ -306,15 +352,47 @@ footer {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  margin-top: 2rem;
 }
-.article-wrapper .guide-step img {
+.article-wrapper .guide-step:last-child {
+  border-top-style: solid;
+  border-width: 0.2rem;
+  border-color: rgb(219, 219, 219);
+  padding-top: 2rem;
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .article-wrapper .guide-step {
+    flex-direction: row;
+    align-items: center;
+  }
+  .article-wrapper .guide-step:last-child {
+    flex-direction: column;
+    width: 40rem;
+  }
+  .article-wrapper .guide-step:last-child p {
+    margin-top: 1rem;
+  }
+  .article-wrapper .guide-step:last-child img {
+    width: 100%;
+  }
+  .article-wrapper .guide-step p {
+    margin: 0 auto;
+    margin-left: 1rem;
+  }
+  .article-wrapper .guide-step img {
+    height: 65%;
+    width: 65%;
+  }
+}
+.article-wrapper img {
   border-radius: 0.5rem;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
 }
-.article-wrapper .guide-step p {
+.article-wrapper p {
   width: 90%;
   margin: 0 auto;
   margin-top: 1rem;
+  font-size: 1rem;
 }
 
 .image-heading {
@@ -332,7 +410,7 @@ footer {
 }
 .image-heading h1 {
   margin-bottom: 2rem;
-  font-size: 2.2rem;
+  font-size: 3rem;
   text-align: center;
   font-weight: 750;
 }
