--- a/styles.scss
+++ b/styles.scss
@@ -23,9 +23,7 @@ $background-color: rgb(240, 243, 243);
   background-position: center;
   background-repeat: no-repeat;
 }
-h1 {
-  font-family: "Inter";
-}
+
 @media screen and (max-width: 900px) {
   .hero {
     font-size: 3rem;
@@ -150,7 +148,6 @@ footer {
     left: 0 !important;
     width: 100%;
     justify-content: center;
-    
 
     ul {
       margin: 0;
@@ -205,7 +202,6 @@ footer {
     img {
       width: 100%;
       display: block;
-   
     }
   }
 
@@ -267,42 +263,101 @@ footer {
     }
   }
 }
-.article-wrapper{
+.article-wrapper {
   background-color: $background-color;
   width: 100%;
   margin-top: 1rem;
+  
+  .article-main {
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto;
+      gap: 0.5rem;
+      row-gap: 1rem;
+      margin-top: 1rem;
+      img {
+        width: 100%;
+      }
+    }
+
+    .item1 {
+      grid-area: 1 / 1 / 1 / 1;
+    }
+
+    .item2 {
+      grid-area: 2 / 1 / 2 / 1;
+    }
+
+    .item3 {
+      grid-area: 3 / 1 / 3 / 1;
+      
+    }
+    ul {
+      margin-left: 3rem;
+      margin-bottom: 1rem;
+      margin-top: 1rem;
+    }
+    figure {
+      margin-top: 0.5rem;
+      text-align: center;
+      color: #3a3a3a;
+      img {
+        width: 100%;
+      }
+    }
+  }
   @media screen and (min-width: 900px) {
     width: 60vw;
     margin: 0 auto;
     max-width: 1200px;
     margin-top: 3rem;
-    .article-intro{
+    .article-intro {
       width: 40rem !important;
-  
- 
     }
 
-    h2{
+    h2 {
       text-align: center;
       margin-bottom: 2rem !important;
       font-size: 2rem !important;
     }
-    .article-main{
+    .article-main {
+      .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+      }
+
+      .item1 {
+        grid-area: 1 / 1 / 2 / 2;
+      }
+
+      .item2 {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+
+      .item3 {
+        grid-area: 2 / 1 / 3 / 3;
+      }
       width: 40vw;
       max-width: 700px;
       margin: 0 auto;
-      
+
+      figure {
+        img {
+          width: 100%;
+        }
+      }
     }
-    
   }
-  h2{
+  h2 {
     font-size: 1.5rem;
     width: 90%;
     margin: 0 auto;
-    
+
     font-weight: 550;
   }
-  .article-intro{
+  .article-intro {
     font-size: 1.3rem;
     font-weight: 500;
     width: 90%;
@@ -317,32 +372,66 @@ footer {
     padding-top: 1rem;
   }
 
-  .part-heading{
-    font-size:2rem ;
+  .part-heading {
+    font-size: 2rem;
     font-weight: 650;
     margin-left: 1.5rem;
     margin-bottom: 1rem;
     margin-top: 1rem;
- 
   }
-  .guide-step{
+
+  .guide-step {
     width: 90%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
-    img{
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+    margin-top: 2rem;
+    &:last-child {
+      border-top-style: solid;
+      border-width: 0.2rem;
+      border-color: rgb(219, 219, 219);
+      padding-top: 2rem;
+      margin-bottom: 2rem;
     }
-    p{
-      width: 90%;
-      margin: 0 auto;
-      margin-top: 1rem;
+
+    @media screen and (min-width: 768px) {
+      &:last-child {
+        flex-direction: column;
+        width: 40rem;
+        p {
+          margin-top: 1rem;
+        }
+        img {
+          width: 100%;
+        }
+      }
+
+      flex-direction: row;
+      align-items: center;
+      p {
+        margin: 0 auto;
+        margin-left: 1rem;
+      }
+
+      img {
+        height: 65%;
+        width: 65%;
+      }
     }
   }
 
+  img {
+    border-radius: 0.5rem;
+  }
+  p {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    font-size: 1rem;
+  }
 }
+
 .image-heading {
   width: 100%;
   height: 35rem;
@@ -358,7 +447,7 @@ footer {
 
   h1 {
     margin-bottom: 2rem;
-    font-size:2.2rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 750;
   }
