--- a/styles.css
+++ b/styles.css
@@ -559,4 +559,66 @@ footer {
     border-radius: 0;
     width: 100%;
   }
+}
+.article-page-wrapper {
+  width: 60%;
+  margin: auto;
+  margin-top: 1rem;
+}
+.article-page-wrapper .articles-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+.article-page-wrapper .articles-container .one {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/skaventide.jpg);
+}
+.article-page-wrapper .articles-container .two {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/black.jpg);
+}
+.article-page-wrapper .articles-container .three {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/tyr5.jpg);
+}
+.article-page-wrapper .articles-container section {
+  border-radius: 0.3rem;
+  width: 17rem;
+  padding-top: 16rem;
+  padding-bottom: 2rem;
+  background-position: center;
+  background-size: cover;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: center;
+}
+.article-page-wrapper .articles-container section a {
+  text-decoration: none;
+  color: white;
+}
+.article-page-wrapper h2 {
+  margin: auto;
+  text-align: center;
+  margin-bottom: 1rem;
+  border-bottom-style: solid;
+  border-color: rgb(219, 219, 219);
+  padding-bottom: 0.5rem;
+  width: 90%;
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.specs {
+  margin: auto;
+  background-color: white;
+  padding: 2rem;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 600px) {
+  .specs {
+    width: 60vw;
+    max-width: 500px;
+    margin-top: 1rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
