--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,6 @@
 $header-color: rgb(236, 235, 231);
 $background-color: rgb(240, 243, 243);
+$border-color: rgb(219, 219, 219);
 
 * {
   margin: 0;
@@ -240,7 +241,7 @@ footer {
     padding-bottom: 2rem;
     border-bottom-style: solid;
     border-width: 0.2rem;
-    border-color: rgb(219, 219, 219);
+    border-color: $border-color;
 
     .top {
       align-self: flex-start;
@@ -372,7 +373,7 @@ footer {
     border-bottom-style: solid;
     border-top-style: solid;
     border-width: 0.2rem;
-    border-color: rgb(219, 219, 219);
+    border-color: $border-color;
     padding-bottom: 1rem;
     padding-top: 1rem;
   }
@@ -385,7 +386,7 @@ footer {
 
   .guide-step {
     width: 90%;
-    
+
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -401,7 +402,6 @@ footer {
     &:last-child {
       border-width: 0.2rem;
       margin-bottom: 2rem;
-     
     }
 
     @media screen and (min-width: 768px) {
@@ -447,7 +447,6 @@ footer {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: 50% 90%;
-  
 
   h1 {
     margin-bottom: 2rem;
@@ -567,7 +566,7 @@ footer {
   p {
     border-top-style: solid;
     border-width: 0.2rem;
-    border-color: rgb(219, 219, 219);
+    border-color: $border-color;
     margin-bottom: 0.5rem;
     padding-top: 0.5rem;
   }
@@ -596,5 +595,72 @@ footer {
         width: 100%;
       }
     }
+  }
+}
+.article-page-wrapper {
+  width: 60%;
+  margin: auto;
+  margin-top: 1rem;
+  .articles-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    .one {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+        url(images/skaventide.jpg);
+    }
+    .two {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+        url(images/black.jpg);
+    }
+    .three {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
+        url(images/tyr5.jpg);
+      
+
+    }
+    section {
+      border-radius: 0.3rem;
+      width: 17rem;
+      padding-top: 16rem;
+      padding-bottom: 2rem;
+      background-position: center;
+      background-size: cover;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+      font-size: 1.4rem;
+      font-weight: 700;
+      text-align: center;
+      a {
+        text-decoration: none;
+        color: white;
+
+    
+      }
+    }
+  }
+  h2 {
+    margin: auto;
+    text-align: center;
+    margin-bottom: 1rem;
+    border-bottom-style: solid;
+    border-color: $border-color;
+    padding-bottom: 0.5rem;
+    width: 90%;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+}
+.specs {
+  margin: auto;
+  background-color: white;
+  padding: 2rem;
+
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  @media screen and (min-width: 600px) {
+    width: 60vw;
+    max-width: 500px;
+    margin-top: 1rem;
   }
 }
