--- a/styles.css
+++ b/styles.css
@@ -646,4 +646,38 @@ h2 {
     max-width: 500px;
     margin-top: 1rem;
   }
+}
+
+.scroll-arrow {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: rgb(0, 0, 0);
+  border-radius: 50%;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.scroll-arrow:hover {
+  background-color: white;
+  border-style: solid;
+}
+
+#scroll-text {
+  margin-top: 0.7rem;
+  color: white;
+  z-index: 10;
+  font-weight: 800;
+  font-size: 2rem;
+  padding: 1rem;
+}
+#scroll-text:hover {
+  color: black;
+}
+
+html {
+  scroll-behavior: smooth;
 }/*# sourceMappingURL=styles.css.map */
