--- a/styles.scss
+++ b/styles.scss
@@ -601,11 +601,11 @@ footer {
   width: 60%;
   margin: auto;
   margin-top: 1rem;
-  h2{
+  h2 {
     border-bottom-style: solid;
     border-color: $border-color;
   }
- 
+
   @media screen and (max-width: 900px) {
     width: 95%;
     margin: 0 auto;
@@ -634,7 +634,7 @@ footer {
   }
   section {
     border-radius: 0.3rem;
-    
+
     width: 17rem;
     padding-top: 16rem;
     padding-bottom: 2rem;
@@ -645,9 +645,8 @@ footer {
     font-size: 1.4rem;
     font-weight: 700;
     text-align: center;
-    @media screen and (max-width:900px){
+    @media screen and (max-width: 900px) {
       width: 100%;
-      
     }
 
     a {
@@ -661,7 +660,7 @@ h2 {
   margin-top: 1rem;
   text-align: center;
   margin-bottom: 1rem;
-  
+
   padding-bottom: 0.5rem;
   width: 90%;
   font-size: 1.3rem;
@@ -673,7 +672,7 @@ h2 {
   background-color: white;
   padding: 2rem;
   text-align: justify;
-  .specs-to-left{
+  .specs-to-left {
     text-align: left;
   }
 
@@ -683,4 +682,40 @@ h2 {
     max-width: 500px;
     margin-top: 1rem;
   }
+}
+.scroll-arrow {
+  
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: rgb(0, 0, 0);
+  border-radius: 50%;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background-color: white;
+    border-style: solid;
+    
+  }
+
+}
+
+#scroll-text {
+  margin-top: 0.7rem;
+  color: white;
+  z-index: 10;
+  font-weight: 800;
+  font-size: 2rem;
+  padding: 1rem;
+  &:hover{
+    color: black;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
